2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2012-06-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added definition of search fields, resolves #38486

2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to TYPO3 4.5, resolves #38401

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.1

2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented new workflow for empty data structure creation, resolves #35053

2010-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2010-12-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for arrays as expression results, resolves #10068
	* Added warning (in manual and code) about Data Filters not being supported yet, resolves #11231

2009-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release