@@ -1,3 +1,7 @@
+2014-05-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Marked as obsolete and release to TER as version 1.2.1
+
 2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released to TER as version 1.2.0
